
include_directories(../..)

add_executable(AsciiHeaderTest src/AsciiHeaderTest.cpp)
add_executable(DataGeneratorTest src/DataGeneratorTest.cpp)
add_executable(DataUnpackerTest src/DataUnpackerTest.cpp)
add_executable(DataGeneratorBitDepthTest src/DataGeneratorBitDepthTest.cpp)
add_executable(FileReaderTest src/FileReaderTest.cpp)
add_executable(NormalSequenceTest src/NormalSequenceTest.cpp)
add_executable(RandomSequenceTest src/RandomSequenceTest.cpp)
add_executable(TimeTest src/TimeTest.cpp)
add_executable(TimerTest src/TimerTest.cpp)
add_executable(ValidationContextTest src/ValidationContextTest.cpp)

set(TEST_LINK_LIBS gtest_main ska_pst_common-utils ska-pst-common-testutils) 

target_link_libraries(AsciiHeaderTest ${TEST_LINK_LIBS})
target_link_libraries(DataGeneratorTest ${TEST_LINK_LIBS})
target_link_libraries(DataUnpackerTest ${TEST_LINK_LIBS})
target_link_libraries(DataGeneratorBitDepthTest ${TEST_LINK_LIBS})
target_link_libraries(FileReaderTest ${TEST_LINK_LIBS})
target_link_libraries(NormalSequenceTest ${TEST_LINK_LIBS})
target_link_libraries(RandomSequenceTest ${TEST_LINK_LIBS})
target_link_libraries(TimeTest ${TEST_LINK_LIBS})
target_link_libraries(TimerTest ${TEST_LINK_LIBS})
target_link_libraries(ValidationContextTest ${TEST_LINK_LIBS})

add_test(AsciiHeaderTest AsciiHeaderTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(DataGeneratorTest DataGeneratorTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(DataUnpackerTest DataUnpackerTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(DataGeneratorBitDepthTest DataGeneratorBitDepthTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(FileReaderTest FileReaderTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(NormalSequenceTest NormalSequenceTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(RandomSequenceTest RandomSequenceTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(TimeTest TimeTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(TimerTest TimerTest)
add_test(ValidationContextTest ValidationContextTest)
