
include_directories(../..)

add_executable(AsciiHeaderTest src/AsciiHeaderTest.cpp)
add_executable(DataUnpackerTest src/DataUnpackerTest.cpp)
add_executable(FileSegmentProducerTest src/FileSegmentProducerTest.cpp)
add_executable(FileBlockProducerTest src/FileBlockProducerTest.cpp)
add_executable(FileReaderTest src/FileReaderTest.cpp)
add_executable(FileWriterTest src/FileWriterTest.cpp)
add_executable(HeapLayoutTest src/HeapLayoutTest.cpp)
add_executable(NormalSequenceTest src/NormalSequenceTest.cpp)
add_executable(PacketGeneratorBitDepthTest src/PacketGeneratorBitDepthTest.cpp)
add_executable(PacketGeneratorTest src/PacketGeneratorTest.cpp)
add_executable(RandomSequenceTest src/RandomSequenceTest.cpp)
add_executable(SegmentGeneratorTest src/SegmentGeneratorTest.cpp)
add_executable(TimeTest src/TimeTest.cpp)
add_executable(TimerTest src/TimerTest.cpp)
add_executable(ValidationContextTest src/ValidationContextTest.cpp)

set(TEST_LINK_LIBS gtest_main ska_pst_common-utils ska-pst-common-testutils) 

target_link_libraries(AsciiHeaderTest ${TEST_LINK_LIBS})
target_link_libraries(DataUnpackerTest ${TEST_LINK_LIBS})
target_link_libraries(FileSegmentProducerTest ${TEST_LINK_LIBS})
target_link_libraries(FileBlockProducerTest ${TEST_LINK_LIBS})
target_link_libraries(FileReaderTest ${TEST_LINK_LIBS})
target_link_libraries(FileWriterTest ${TEST_LINK_LIBS})
target_link_libraries(HeapLayoutTest ${TEST_LINK_LIBS})
target_link_libraries(NormalSequenceTest ${TEST_LINK_LIBS})
target_link_libraries(PacketGeneratorBitDepthTest ${TEST_LINK_LIBS})
target_link_libraries(PacketGeneratorTest ${TEST_LINK_LIBS})
target_link_libraries(RandomSequenceTest ${TEST_LINK_LIBS})
target_link_libraries(SegmentGeneratorTest ${TEST_LINK_LIBS})
target_link_libraries(TimeTest ${TEST_LINK_LIBS})
target_link_libraries(TimerTest ${TEST_LINK_LIBS})
target_link_libraries(ValidationContextTest ${TEST_LINK_LIBS})

add_test(AsciiHeaderTest AsciiHeaderTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(DataUnpackerTest DataUnpackerTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(FileSegmentProducerTest FileSegmentProducerTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(FileBlockProducerTest FileBlockProducerTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(FileReaderTest FileReaderTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(FileWriterTest FileWriterTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(HeapLayoutTest HeapLayoutTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(NormalSequenceTest NormalSequenceTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(PacketGeneratorBitDepthTest PacketGeneratorBitDepthTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(PacketGeneratorTest PacketGeneratorTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(RandomSequenceTest RandomSequenceTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(SegmentGeneratorTest SegmentGeneratorTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(TimeTest TimeTest --test_data "${CMAKE_CURRENT_LIST_DIR}/data")
add_test(TimerTest TimerTest)
add_test(ValidationContextTest ValidationContextTest)
